--- a/style.css
+++ b/style.css
@@ -1,5 +1,28 @@
 @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap");
+:root {
+  --game-wrapper-paddingTop: 150px;
+  --tetris-padding: 20px;
+}
+
+@media only all and (max-height: 900px) {
+  :root {
+    --game-wrapper-paddingTop: 20px;
+  }
+}
+
+@media only all and (max-width: 850px) {
+  :root {
+    --game-wrapper-paddingTop: 0;
+  }
+}
+
+@media only all and (max-width: 450px) {
+  :root {
+    --tetris-padding: 10px;
+  }
+}
+
 body {
   margin: 0;
   font-family: 'Press Start 2P', cursive;
@@ -14,8 +37,14 @@ body {
 .container {
   background: url(assets/background.png);
   background-size: cover;
-  min-height: 100vh;
+  height: 100vh;
   position: relative;
+}
+
+@media only all and (max-width: 850px) {
+  .container {
+    max-height: 100vh;
+  }
 }
 
 .game-wrapper {
@@ -26,17 +55,32 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   position: relative;
-  padding-top: calc((100vh - 785px) / 2);
+  padding-top: var(--game-wrapper-paddingTop);
+}
+
+@media only all and (max-width: 850px) {
+  .game-wrapper {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
 }
 
 .tetris {
-  padding: 20px;
+  padding: var(--tetris-padding);
   border-radius: 10px;
   position: relative;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(66, 15, 92, 0.7)), to(rgba(33, 80, 162, 0.7)));
   background: linear-gradient(rgba(66, 15, 92, 0.7), rgba(33, 80, 162, 0.7));
   -webkit-box-shadow: 5px 5px 25px -5px #FF8080, -5px 5px 25px -5px #FFE488, -5px -5px 25px -5px #8CFF85, 5px -5px 25px -5px #80C7FF, 5px 5px 25px -5px #E488FF, -5px 5px 25px -5px #FF616B, -5px -5px 25px -5px #8E5CFF, 5px 5px 15px 0px rgba(0, 0, 0, 0);
           box-shadow: 5px 5px 25px -5px #FF8080, -5px 5px 25px -5px #FFE488, -5px -5px 25px -5px #8CFF85, 5px -5px 25px -5px #80C7FF, 5px 5px 25px -5px #E488FF, -5px 5px 25px -5px #FF616B, -5px -5px 25px -5px #8E5CFF, 5px 5px 15px 0px rgba(0, 0, 0, 0);
+}
+
+@media only all and (max-width: 850px) {
+  .tetris {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
 }
 
 .game-area {
@@ -87,6 +131,35 @@ body {
   margin-bottom: 20px;
 }
 
+@media only all and (max-width: 850px) {
+  .info {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    font-size: 18px;
+  }
+  .info .output {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding: 0;
+  }
+  .info .output > div:first-child {
+    display: none;
+  }
+  .info .output > div {
+    margin: 30px 0 50px 0;
+  }
+}
+
 .buttons {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -99,6 +172,27 @@ body {
       -ms-flex: 0 0 200px;
           flex: 0 0 200px;
   padding-right: 30px;
+}
+
+@media only all and (max-width: 850px) {
+  .buttons {
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3;
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    padding-right: 0;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    padding-top: 40px;
+    padding-bottom: 60px;
+  }
 }
 
 .btn {
@@ -116,8 +210,25 @@ body {
   cursor: pointer;
 }
 
+@media only all and (max-width: 850px) {
+  .btn {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 150px;
+            flex: 0 0 150px;
+    padding: 15px 0;
+    font-size: 16px;
+    margin-bottom: 10px;
+  }
+}
+
 .recordes {
   font-size: 18px;
+}
+
+@media only all and (max-width: 850px) {
+  .recordes {
+    font-size: 16px;
+  }
 }
 
 .score {
@@ -125,15 +236,49 @@ body {
   transition: all 0.5s ease-out;
 }
 
-.lavel {
+@media only all and (max-width: 850px) {
+  .score {
+    padding: 15px 0px 10px 50px;
+    width: 120px;
+    margin-right: 30px;
+    border-radius: 5px;
+    position: relative;
+  }
+  .score::before {
+    content: url(assets/star.svg);
+    position: absolute;
+    left: 10px;
+    top: 5px;
+    width: 30px;
+  }
+}
+
+.level {
   -webkit-transition: all 0.5s ease-out;
   transition: all 0.5s ease-out;
 }
 
+@media only all and (max-width: 850px) {
+  .level {
+    padding: 15px 0px 10px 50px;
+    width: 120px;
+    margin-left: 30px;
+    border-radius: 5px;
+    position: relative;
+  }
+  .level::before {
+    content: url(assets/trophy.svg);
+    position: absolute;
+    left: 10px;
+    top: 7px;
+    width: 30px;
+  }
+}
+
 .active-score {
   color: #ffca39;
-  -webkit-transform: scale(2);
-          transform: scale(2);
+  -webkit-transform: scale(1.5);
+          transform: scale(1.5);
 }
 
 .sound-btns {
@@ -146,6 +291,14 @@ body {
   border-radius: 5px;
   overflow: hidden;
   height: 48px;
+}
+
+@media only all and (max-width: 850px) {
+  .sound-btns {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 200px;
+            flex: 0 0 200px;
+  }
 }
 
 .sound-btn {
@@ -202,6 +355,13 @@ body {
   font-size: 26px;
   -webkit-box-shadow: 5px 5px 5px -5px rgba(34, 60, 80, 0.6);
           box-shadow: 5px 5px 5px -5px rgba(34, 60, 80, 0.6);
+}
+
+@media only all and (max-width: 700px) {
+  .registration-form {
+    width: 80%;
+    padding: 50px 5% 70px 5%;
+  }
 }
 
 .nickname-label {
