--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ body {
     display: none;
   }
   .info .output > div {
-    margin: 30px 0 50px 0;
+    margin: 30px 0 20px 0;
   }
 }
 
@@ -191,7 +191,7 @@ body {
     -ms-flex-pack: distribute;
         justify-content: space-around;
     padding-top: 40px;
-    padding-bottom: 60px;
+    padding-bottom: 20px;
   }
 }
 
@@ -213,8 +213,8 @@ body {
 @media only all and (max-width: 850px) {
   .btn {
     -webkit-box-flex: 0;
-        -ms-flex: 0 0 150px;
-            flex: 0 0 150px;
+        -ms-flex: 0 0 140px;
+            flex: 0 0 140px;
     padding: 15px 0;
     font-size: 16px;
     margin-bottom: 10px;
@@ -279,6 +279,13 @@ body {
   color: #ffca39;
   -webkit-transform: scale(1.5);
           transform: scale(1.5);
+}
+
+@media only all and (max-width: 850px) {
+  .active-score {
+    -webkit-transform: scale(1.25);
+            transform: scale(1.25);
+  }
 }
 
 .sound-btns {
