--- a/style.scss
+++ b/style.scss
@@ -122,7 +122,7 @@ body {
       }
       
       >div{
-        margin: 30px 0 50px 0;
+        margin: 30px 0 20px 0;
       }
   
     }
@@ -144,7 +144,7 @@ body {
     flex-wrap: wrap;
     justify-content: space-around;
     padding-top: 40px;
-    padding-bottom: 60px;
+    padding-bottom: 20px;
     
   }
 }
@@ -162,7 +162,7 @@ body {
   border: none;
   cursor: pointer;
   @media only all and (max-width: $tablet) {
-    flex: 0 0 150px;
+    flex: 0 0 140px;
     padding: 15px 0;
     font-size: 16px;
     margin-bottom: 10px;
@@ -217,6 +217,9 @@ body {
 .active-score {
   color: rgb(255, 202, 57);
   transform: scale(1.5);
+  @media only all and (max-width: $tablet) {
+    transform: scale(1.25);
+  }
 }
 
 .sound-btns {
