--- a/style.scss
+++ b/style.scss
@@ -23,6 +23,11 @@ body {
   margin: 0;
   font-family: 'Press Start 2P', cursive;
   font-size: 24px;
+
+  @media only all and (max-width: $tablet) {
+    font-size: 20px;
+  }
+  
 }
 
 * {
@@ -93,15 +98,22 @@ body {
 }
 
 .info {
-  flex: 0 0 200px;
+  flex: 0 0 220px;
 
   .output {
     text-align: center;
-    padding: 10px 10px 30px 10px;
     color: white;
+    display: flex;
+    align-items: stretch;
+    margin: 10px 0 40px 20px;
 
-    >div{
-      margin-bottom: 20px;
+    .icon {
+      flex: 0 0 50px;
+      
+      >svg{
+        width: 50px;
+        height: 70px;
+      }
     }
 
   }
@@ -112,23 +124,51 @@ body {
     display: flex;
     justify-content: center;
     font-size: 18px;
+    flex-wrap: wrap;
 
     .output {
-     display: flex;
-     padding: 0;
+      margin: 43px 30px 20px 0;
+      flex: 0 0 140px;
 
-      >div:first-child {
-        display: none;
+      &:nth-child(2) {
+        margin-right: 0;
       }
-      
-      >div{
-        margin: 30px 0 20px 0;
+
+      .icon {
+        flex: 0 0 30px;
+        
+        >svg{
+          width: 30px;
+          height: 50px;
+        }
       }
-  
+
     }
+
   }
  
 }
+
+.score {
+  transition: transform 0.5s ease-out;
+  flex: 1 1 auto;
+  line-height: 70px;
+
+ 
+  @media only all and (max-width: $tablet) {
+    line-height: 50px;
+  }
+ }
+ 
+ .level {
+   transition: font-size 0.5s ease-out;
+   flex: 1 1 auto;
+   line-height: 70px;
+ 
+   @media only all and (max-width: $tablet) {
+    line-height: 50px;
+    }
+  }
 
 .buttons {
   display: flex;
@@ -136,15 +176,41 @@ body {
   flex: 0 0 200px;
   padding-right: 30px;
 
+  .sound-btns {
+    background: linear-gradient(rgba(8,177,95, 0.2), rgba(33,80,162, 0.2));
+    border: #218b58 2px solid;
+    border-radius: 5px;
+    overflow: hidden;
+    height: 48px;
+  }
+
+  .sound-btn {
+    box-shadow: inset 1px 0px 15px 2px rgba(16, 46, 97, 0.7);
+    transition: all 0.5s ease-out;
+    flex: 0 0 50%;
+  }
+
+  .active {
+    background: linear-gradient(rgba(8,177,95, 1), rgba(33,80,162, 1));
+    box-shadow: none;
+  }
+  
+
   @media only all and (max-width: $tablet) {
     order: 3;
     flex-basis: 100%;
     padding-right: 0;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
-    padding-top: 40px;
-    padding-bottom: 20px;
+    justify-content: center;
+    padding-top: 30px;
+    padding-bottom: 10px;
+
+    .recordes,
+    .rules,
+    .sound-btns {
+      display: none;
+    }
     
   }
 }
@@ -165,7 +231,7 @@ body {
     flex: 0 0 140px;
     padding: 15px 0;
     font-size: 16px;
-    margin-bottom: 10px;
+    margin: 0 15px;
   }
 }
 
@@ -176,44 +242,6 @@ body {
   }
 }
 
-.score {
- transition: all 0.5s ease-out;
-
- @media only all and (max-width: $tablet) {
-  padding: 15px 0px 10px 50px;
-  width: 120px;
-  margin-right: 30px;
-  border-radius: 5px;
-  position: relative;
-  &::before {
-    content: url(assets/star.svg);
-    position: absolute;
-    left: 10px;
-    top: 5px;
-    width: 30px;
-  }
- }
-}
-
-.level {
-  transition: all 0.5s ease-out;
-
-  @media only all and (max-width: $tablet) {
-    padding: 15px 0px 10px 50px;
-    width: 120px;
-    margin-left: 30px;
-    border-radius: 5px;
-    position: relative;
-    &::before {
-      content: url(assets/trophy.svg);
-      position: absolute;
-      left: 10px;
-      top: 7px;
-      width: 30px;
-    }
-   }
- }
-
 .active-score {
   color: rgb(255, 202, 57);
   transform: scale(1.5);
@@ -223,53 +251,22 @@ body {
 }
 
 .sound-btns {
-  background: linear-gradient(rgba(8,177,95, 0.2), rgba(33,80,162, 0.2));
-  border: #218b58 2px solid;
   display: flex;
-  border-radius: 5px;
-  overflow: hidden;
-  height: 48px;
-
-  @media only all and (max-width: $tablet) {
-    flex: 0 0 200px;
-  }
-
 }
 
 .sound-btn {
   background-color: transparent;
-  flex: 0 0 50%;
   border: none;
   outline: none;
-  position: relative;
-  box-shadow: inset 1px 0px 15px 2px rgba(16, 46, 97, 0.7);
-  transition: all 0.5s ease-out;
-  &::before {
-    position: absolute;
-    // left: 50%;
-    top: 6px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 35%;
+  svg {
+    width: 40px;
+    height: 40px;
+    fill: white;
   }
+  
 }
 
-.sound-on {
-  &::before {
-    content: url(assets/sound-on.svg);
-  }
-}
 
-.sound-off {
-  &::before {
-    content: url(assets/sound-off.svg);
-  }
-}
-
-.active {
-  background: linear-gradient(rgba(8,177,95, 1), rgba(33,80,162, 1));
-  box-shadow: none;
-}
 
 .registration-form {
   position: absolute;
@@ -286,19 +283,16 @@ body {
  font-size: 26px;
  box-shadow: 5px 5px 5px -5px rgba(34, 60, 80, 0.6);
 
- @media only all and (max-width: 700px) {
-  width: 80%;
-  padding: 50px 5% 70px 5%; 
-}
-
-
+  @media only all and (max-width: 700px) {
+    width: 80%;
+    padding: 50px 5% 70px 5%; 
+  }
 
 }
 
 .nickname-label {
   display: block;
   text-align: center;
-
 }
 
 .nickname-input {
@@ -347,4 +341,115 @@ body {
 
 .notscrollable {
   overflow: hidden;
+}
+
+.menu-burger {
+  display: none;
+  position: absolute;
+  z-index: 5;
+  left: 5px;
+  top: 5px;
+  width: 50px;
+  height: 43px;
+
+  >span {
+    position: absolute;
+    width: 50px;
+    height: 5px;
+    background: linear-gradient(90deg, rgba(8,177,95, 1), rgb(4, 152, 179));
+    box-shadow: 1px 1px 1px -1px rgba(2, 2, 2, 0.6);
+    border-radius: 2px;
+  }
+
+  >span:nth-child(2) {
+    top: 19px;
+  }
+
+  >span:nth-child(3) {
+    top: 38px;
+  }
+
+  @media only all and (max-width: $tablet) {
+    display: block;
+  }
+}
+
+.aside-menu {
+  position: absolute;
+  height: 50vh;
+  background: linear-gradient(135deg, rgb(196, 241, 229) 0% 45%, rgb(247, 193, 241) 45% 100%);
+  background: linear-gradient(155deg, rgb(57, 192, 183) 0% 25%, rgb(21, 182, 205) 25% 65%, rgb(140, 206, 164) 65% 100%);
+  box-shadow: 5px 5px 5px -5px rgba(2, 2, 2, 0.6);
+  border-radius: 0 0 5px 0;
+  padding: 90px 20px 70px 30px;
+  overflow: hidden;
+  visibility: hidden;
+  width: 0px;
+  transition: width 0.5s ease-out;
+  
+  .close-btn {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    width: 30px;
+    height: 30px;
+    background-color: transparent;
+    border: none;
+    outline: none;
+
+    svg {
+      fill: white;
+    }
+    &:active,
+    &:hover {
+
+      svg {
+        fill: rgb(162, 100, 172);
+      }
+
+    }
+
+  }
+
+  >div {
+    margin-bottom: 30px;
+  }
+
+  .sound-btn {
+    text-align: left;
+    flex: 0 0 70px;
+      svg {
+        transition: fill 0.5s ease-out;
+      }
+  }
+
+  .active {
+    svg {
+      fill: rgb(162, 100, 172);
+    }
+  }
+
+}
+
+.aside-btn {
+  flex: 0 0 200px;
+  height: 40px;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  font-size: 24px;
+  text-transform: uppercase;
+  color: white;
+  font-family: 'Share Tech Mono', monospace;
+  z-index: -1;
+  &:hover,
+  &:active {
+    color: rgb(162, 100, 172);
+  }
+}
+
+.aside-menu-opened {
+  z-index: 10;
+  visibility: visible;
+  width: 50%;
 }
