--- a/style.scss
+++ b/style.scss
@@ -39,6 +39,7 @@ body {
   background-size: cover;
   height: 100vh;
   position: relative;
+  visibility: hidden;
   @media only all and (max-width: $tablet) {
    max-height: 100vh;
   }
@@ -265,8 +266,6 @@ body {
   }
   
 }
-
-
 
 .registration-form {
   position: absolute;
