--- a/style.css
+++ b/style.css
@@ -311,6 +311,10 @@ body {
           box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.3);
 }
 
+.btn svg {
+  display: none;
+}
+
 @media only all and (max-width: 850px) {
   .btn {
     -webkit-box-flex: 0;
@@ -318,32 +322,30 @@ body {
             flex: 0 0 55px;
     height: 55px;
     border-radius: 50%;
-    margin: 0 20px;
-    background: none;
+    margin: 0 15px;
+    background: -webkit-gradient(linear, left top, left bottom, from(#ffa68d), to(#ff3051));
+    background: linear-gradient(#ffa68d, #ff3051);
+    position: relative;
   }
   .btn span {
     display: none;
   }
-}
-
-@media only all and (max-width: 850px) {
-  .play {
-    background: url(assets/power.svg) no-repeat;
-    background-size: cover;
+  .btn svg {
+    display: block;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    fill: white;
   }
 }
 
 @media only all and (max-width: 850px) {
-  .pause {
-    background: url(assets/pause.svg) no-repeat;
-    background-size: cover;
-  }
-}
-
-@media only all and (max-width: 850px) {
-  .resume {
-    background: url(assets/play-button.svg) no-repeat;
-    background-size: cover;
+  .pause svg {
+    width: 25px;
   }
 }
 
@@ -354,8 +356,9 @@ body {
 @media only all and (max-width: 850px) {
   .drop {
     display: block;
-    background: url(assets/drop.svg) no-repeat;
-    background-size: cover;
+  }
+  .drop svg {
+    top: 55%;
   }
 }
 
