--- a/style.scss
+++ b/style.scss
@@ -235,38 +235,41 @@ body {
     box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.3);
   }
 
+  svg {
+    display: none;
+  }
+
   @media only all and (max-width: $tablet) {
     flex: 0 0 55px;
     height: 55px;
     border-radius: 50%;
-    margin: 0 20px;
-    background: none;
+    margin: 0 15px;
+    background: linear-gradient(#ffa68d, #ff3051);
+    position: relative;
     
     span {
       display: none;
     }
 
-  }
-}
+    svg {
+      display: block;
+      width: 30px;
+      height: 30px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      fill: white;
+    }
 
-.play {
-  @media only all and (max-width: $tablet) {
-    background: url(assets/power.svg) no-repeat;
-    background-size: cover;
   }
 }
 
 .pause {
   @media only all and (max-width: $tablet) {
-    background: url(assets/pause.svg) no-repeat;
-    background-size: cover;
-  }
-}
-
-.resume {
-  @media only all and (max-width: $tablet) {
-    background: url(assets/play-button.svg) no-repeat;
-    background-size: cover;
+    svg {
+      width: 25px;
+    }
   }
 }
 
@@ -274,8 +277,10 @@ body {
   display: none;
   @media only all and (max-width: $tablet) {
     display: block;
-    background: url(assets/drop.svg) no-repeat;
-    background-size: cover;
+    svg {
+      top: 55%;
+    }
+
   }
 }
 
