--- a/style.css
+++ b/style.css
@@ -45,7 +45,6 @@ body {
   background-size: cover;
   height: 100vh;
   position: relative;
-  visibility: hidden;
 }
 
 @media only all and (max-width: 850px) {
@@ -556,67 +555,65 @@ body {
   }
 }
 
-.aside-menu {
+.menu {
   position: absolute;
-  height: 50vh;
-  background: linear-gradient(135deg, #c4f1e5 0% 45%, #f7c1f1 45% 100%);
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 500px;
+  min-height: 500px;
   background: linear-gradient(155deg, #39c0b7 0% 25%, #15b6cd 25% 65%, #8ccea4 65% 100%);
-  -webkit-box-shadow: 5px 5px 5px -5px rgba(2, 2, 2, 0.6);
-          box-shadow: 5px 5px 5px -5px rgba(2, 2, 2, 0.6);
-  border-radius: 0 0 5px 0;
-  padding: 90px 20px 70px 30px;
-  overflow: hidden;
-  visibility: hidden;
-  width: 0px;
-  -webkit-transition: width 0.3s ease-out;
-  transition: width 0.3s ease-out;
+  background: linear-gradient(155deg, #8ccea4 0% 25%, #15b6cd 25% 65%, #39c0b7 65% 100%);
+  -webkit-box-shadow: 5px 5px 15px -5px rgba(2, 2, 2, 0.6);
+          box-shadow: 5px 5px 15px -5px rgba(2, 2, 2, 0.6);
+  border-radius: 5px;
+  padding: 30px;
 }
 
-.aside-menu .close-btn {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  width: 30px;
-  height: 30px;
+.menu .title {
+  font-size: 24px;
+  color: white;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 70px;
+}
+
+.menu .menu-btn {
+  display: block;
+  width: 100%;
+  height: 40px;
   background-color: transparent;
   border: none;
   outline: none;
+  font-size: 24px;
+  text-transform: uppercase;
+  text-align: center;
+  color: white;
+  font-family: 'Share Tech Mono', monospace;
+  margin-bottom: 20px;
 }
 
-.aside-menu .close-btn svg {
-  fill: white;
+.menu .menu-btn:hover, .menu .menu-btn:active {
+  color: #a264ac;
 }
 
-.aside-menu .close-btn:active svg, .aside-menu .close-btn:hover svg {
-  fill: #a264ac;
-}
-
-.aside-menu > div {
+.menu > div {
   margin-bottom: 30px;
 }
 
-.aside-menu .sound-btns {
-  width: 0px;
-  overflow: hidden;
-}
-
-.aside-menu .sound-btn {
-  text-align: left;
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 70px;
-          flex: 0 0 70px;
-}
-
-.aside-menu .sound-btn svg {
-  -webkit-transition: fill 0.5s ease-out;
-  transition: fill 0.5s ease-out;
-}
-
-.aside-menu .active svg {
+.menu .active svg {
   fill: #a264ac;
 }
 
-.aside-btn {
+@media only all and (max-width: 850px) {
+  .menu {
+    width: 90%;
+    min-height: 300px;
+  }
+}
+
+.menu-btn {
   width: 0px;
   height: 40px;
   background-color: transparent;
@@ -630,20 +627,6 @@ body {
   overflow: hidden;
 }
 
-.aside-btn:hover, .aside-btn:active {
+.menu-btn:hover, .menu-btn:active {
   color: #a264ac;
-}
-
-.aside-menu-opened {
-  z-index: 10;
-  visibility: visible;
-  width: 50%;
-}
-
-.aside-menu-opened .sound-btns {
-  width: 100%;
-}
-
-.aside-menu-opened .aside-btn {
-  width: 150px;
 }
