--- a/style.scss
+++ b/style.scss
@@ -39,7 +39,6 @@ body {
   background-size: cover;
   height: 100vh;
   position: relative;
-  visibility: hidden;
   @media only all and (max-width: $tablet) {
    max-height: 100vh;
   }
@@ -440,39 +439,44 @@ body {
   }
 }
 
-.aside-menu {
+.menu {
   position: absolute;
-  height: 50vh;
-  background: linear-gradient(135deg, rgb(196, 241, 229) 0% 45%, rgb(247, 193, 241) 45% 100%);
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,- 50%);
+  width: 500px;
+  min-height: 500px;
   background: linear-gradient(155deg, rgb(57, 192, 183) 0% 25%, rgb(21, 182, 205) 25% 65%, rgb(140, 206, 164) 65% 100%);
-  box-shadow: 5px 5px 5px -5px rgba(2, 2, 2, 0.6);
-  border-radius: 0 0 5px 0;
-  padding: 90px 20px 70px 30px;
-  overflow: hidden;
-  visibility: hidden;
-  width: 0px;
-  transition: width 0.3s ease-out;
-  
-  .close-btn {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    width: 30px;
-    height: 30px;
+  background: linear-gradient(155deg, rgb(140, 206, 164) 0% 25%, rgb(21, 182, 205) 25% 65%, rgb(57, 192, 183) 65% 100%);
+  box-shadow: 5px 5px 15px -5px rgba(2, 2, 2, 0.6);
+  border-radius:5px;
+  padding: 30px;
+
+  .title {
+    font-size: 24px;
+    color: white;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 70px;
+  }
+
+  .menu-btn {
+    display: block;
+    width: 100%;
+    height: 40px;
     background-color: transparent;
     border: none;
     outline: none;
-
-    svg {
-      fill: white;
-    }
-    &:active,
-    &:hover {
-
-      svg {
-        fill: rgb(162, 100, 172);
-      }
-
+    font-size: 24px;
+    text-transform: uppercase;
+    text-align: center;
+    color: white;
+    font-family: 'Share Tech Mono', monospace;
+    margin-bottom: 20px;
+   
+    &:hover,
+    &:active {
+      color: rgb(162, 100, 172);
     }
 
   }
@@ -481,28 +485,21 @@ body {
     margin-bottom: 30px;
   }
 
-  .sound-btns {
-    width: 0px;
-    overflow: hidden;
-  }
-
-  .sound-btn {
-    text-align: left;
-    flex: 0 0 70px;
-      svg {
-        transition: fill 0.5s ease-out;
-      }
-  }
-
   .active {
     svg {
       fill: rgb(162, 100, 172);
     }
   }
 
+  @media only all and (max-width: $tablet) {
+    width: 90%;
+    min-height: 300px;
+
+  }
+
 }
 
-.aside-btn {
+.menu-btn {
   width: 0px;
   height: 40px;
   background-color: transparent;
@@ -521,17 +518,4 @@ body {
   }
 }
 
-.aside-menu-opened {
-  z-index: 10;
-  visibility: visible;
-  width: 50%;
 
-  .sound-btns {
-    width: 100%;
-  }
-
-  .aside-btn {
-    width: 150px;
-  }
-
-}
