--- a/style.css
+++ b/style.css
@@ -43,14 +43,8 @@ body {
 .container {
   background: url(assets/background.png);
   background-size: cover;
-  height: 100vh;
+  min-height: 100vh;
   position: relative;
-}
-
-@media only all and (max-width: 850px) {
-  .container {
-    max-height: 100vh;
-  }
 }
 
 .game-wrapper {
@@ -137,6 +131,7 @@ body {
       -ms-flex-align: stretch;
           align-items: stretch;
   margin: 10px 0 40px 20px;
+  overflow: hidden;
 }
 
 .info .output .icon {
@@ -398,15 +393,8 @@ body {
 
 .active-score {
   color: #ffca39;
-  -webkit-transform: scale(1.5);
-          transform: scale(1.5);
-}
-
-@media only all and (max-width: 850px) {
-  .active-score {
-    -webkit-transform: scale(1.25);
-            transform: scale(1.25);
-  }
+  -webkit-transform: scale(1.25);
+          transform: scale(1.25);
 }
 
 .sound-btns {
@@ -427,29 +415,141 @@ body {
   fill: white;
 }
 
-.registration-form {
+.reg-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 20px auto 0 auto;
+  border: 1px solid white;
+  width: 60%;
+}
+
+@media only all and (max-width: 700px) {
+  .reg-form {
+    width: 80%;
+  }
+}
+
+@media only all and (max-width: 400px) {
+  .reg-form {
+    width: 100%;
+  }
+}
+
+.submitted {
+  border: none;
+  margin-top: 10px;
+  margin-bottom: -10px;
+}
+
+.submitted .reg-btn {
+  display: none;
+}
+
+.submitted .reg-input {
+  text-align: center;
+  font-size: 22px;
+  cursor: pointer;
+}
+
+.submitted .reg-input::-webkit-input-placeholder {
+  font-size: 22px;
+}
+
+.submitted .reg-input:-ms-input-placeholder {
+  font-size: 22px;
+}
+
+.submitted .reg-input::-ms-input-placeholder {
+  font-size: 22px;
+}
+
+.submitted .reg-input::placeholder {
+  font-size: 22px;
+}
+
+.reg-label {
+  font-family: 'Share Tech Mono', monospace;
+  text-align: center;
+  display: block;
+  color: white;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.reg-input {
+  background-color: transparent;
+  outline: none;
+  border: none;
+  display: block;
+  padding: 13px 10px 10px 20px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 0px;
+          flex: 1 1 0px;
+  color: #a264ac;
+  font-family: 'Share Tech Mono', monospace;
+  font-size: 18px;
+}
+
+.reg-input::-webkit-input-placeholder {
+  color: #a264ac;
+  font-family: 'Share Tech Mono', monospace;
+  font-size: 18px;
+}
+
+.reg-input:-ms-input-placeholder {
+  color: #a264ac;
+  font-family: 'Share Tech Mono', monospace;
+  font-size: 18px;
+}
+
+.reg-input::-ms-input-placeholder {
+  color: #a264ac;
+  font-family: 'Share Tech Mono', monospace;
+  font-size: 18px;
+}
+
+.reg-input::placeholder {
+  color: #a264ac;
+  font-family: 'Share Tech Mono', monospace;
+  font-size: 18px;
+}
+
+@media only all and (max-width: 700px) {
+  .reg-input {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 150px;
+            flex: 0 0 150px;
+    width: 150px;
+  }
+}
+
+.reg-btn {
+  border: none;
+  outline: none;
+  background-color: transparent;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 50px;
+          flex: 0 0 50px;
+  position: relative;
+}
+
+.reg-btn svg {
   position: absolute;
-  width: 500px;
-  z-index: 10;
   left: 50%;
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  background: linear-gradient(135deg, #e2fbf4 0% 45%, #fbe6f9 45% 100%);
-  border-radius: 10px;
-  padding: 80px 75px 120px 75px;
-  font-family: 'Share Tech Mono', monospace;
-  color: #696f73;
-  font-size: 26px;
-  -webkit-box-shadow: 5px 5px 5px -5px rgba(34, 60, 80, 0.6);
-          box-shadow: 5px 5px 5px -5px rgba(34, 60, 80, 0.6);
+  fill: white;
+  width: 20px;
+  height: 30px;
 }
 
-@media only all and (max-width: 700px) {
-  .registration-form {
-    width: 80%;
-    padding: 50px 5% 70px 5%;
-  }
+.reg-btn:hover svg {
+  fill: #a264ac;
 }
 
 .nickname-label {
@@ -511,56 +611,6 @@ body {
   background-color: #43c9ae;
 }
 
-.notvisible {
-  -webkit-transition: -webkit-transform 0.5s ease-out;
-  transition: -webkit-transform 0.5s ease-out;
-  transition: transform 0.5s ease-out;
-  transition: transform 0.5s ease-out, -webkit-transform 0.5s ease-out;
-  z-index: -1;
-  visibility: hidden;
-  -webkit-transform: scale(0);
-          transform: scale(0);
-}
-
-.notscrollable {
-  overflow: hidden;
-}
-
-.menu-burger {
-  display: none;
-  position: absolute;
-  z-index: 5;
-  left: 5px;
-  top: 5px;
-  width: 50px;
-  height: 43px;
-}
-
-.menu-burger > span {
-  position: absolute;
-  width: 50px;
-  height: 5px;
-  background: -webkit-gradient(linear, left top, right top, from(#08b15f), to(#0498b3));
-  background: linear-gradient(90deg, #08b15f, #0498b3);
-  -webkit-box-shadow: 1px 1px 1px -1px rgba(2, 2, 2, 0.6);
-          box-shadow: 1px 1px 1px -1px rgba(2, 2, 2, 0.6);
-  border-radius: 2px;
-}
-
-.menu-burger > span:nth-child(2) {
-  top: 19px;
-}
-
-.menu-burger > span:nth-child(3) {
-  top: 38px;
-}
-
-@media only all and (max-width: 850px) {
-  .menu-burger {
-    display: block;
-  }
-}
-
 .popup {
   position: absolute;
   left: 50%;
@@ -605,8 +655,18 @@ body {
 
 @media only all and (max-width: 850px) {
   .popup {
+    position: static;
+    margin: 0 auto;
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
     width: 90%;
     min-height: 300px;
+  }
+}
+
+@media only all and (max-width: 850px) {
+  .mob-container {
+    padding: 20vh 0;
   }
 }
 
@@ -623,6 +683,7 @@ body {
   color: white;
   font-family: 'Share Tech Mono', monospace;
   margin-bottom: 20px;
+  cursor: pointer;
 }
 
 .menu .menu-btn:hover, .menu .menu-btn:active {
@@ -661,4 +722,39 @@ body {
 
 .menu-btn:hover, .menu-btn:active {
   color: #a264ac;
+}
+
+.record-table {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: white;
+  font-family: 'Share Tech Mono', monospace;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  font-size: 24px;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.score-position {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 10%;
+          flex: 0 0 10%;
+  text-align: left;
+}
+
+.user-name {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 60%;
+          flex: 1 0 60%;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.user-score {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 30%;
+          flex: 0 1 30%;
+  text-align: center;
 }
