--- a/style.css
+++ b/style.css
@@ -520,10 +520,7 @@ body {
 
 @media only all and (max-width: 700px) {
   .reg-input {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 0 150px;
-            flex: 0 0 150px;
-    width: 150px;
+    width: calc(100% - 50px);
   }
 }
 
