--- a/style.scss
+++ b/style.scss
@@ -397,8 +397,7 @@ body {
   }
 
   @media only all and (max-width: 700px) {
-    flex: 0 0 150px;
-    width: 150px;
+    width: calc(100% - 50px);
   }
 }
 
