--- a/style.scss
+++ b/style.scss
@@ -591,6 +591,10 @@ flex-wrap: wrap;
 font-size: 24px;
 width: 80%;
 margin: 0 auto;
+@media only all and (max-width: 450px) {
+  width: 100%;
+  font-size: 20px;
+}
 }
 
 .score-position {
@@ -599,12 +603,12 @@ margin: 0 auto;
 }
 
 .user-name {
-  flex: 1 0 60%;
+  flex: 0 0 60%;
   text-align: center;
   margin-bottom: 10px;
 }
 
 .user-score {
-  flex: 0 1 30%;
+  flex: 0 0 30%;
   text-align: center;
 }
