--- a/style.css
+++ b/style.css
@@ -667,6 +667,12 @@ body {
   }
 }
 
+@media only all and (max-width: 450px) {
+  .mob-container {
+    padding: 10vh 0;
+  }
+}
+
 .menu .menu-btn {
   display: block;
   width: 100%;
@@ -761,4 +767,18 @@ body {
       -ms-flex: 0 0 30%;
           flex: 0 0 30%;
   text-align: center;
+}
+
+.arrow-back {
+  position: absolute;
+  top: 0;
+  left: 0;
+  border: none;
+  outline: none;
+  background-color: transparent;
+}
+
+.arrow-back svg {
+  width: 50px;
+  height: 50px;
 }
