--- a/style.scss
+++ b/style.scss
@@ -520,6 +520,10 @@ body {
   @media only all and (max-width: $tablet) {
   padding: 20vh 0;
   }
+
+  @media only all and (max-width: 450px) {
+    padding: 10vh 0;
+  }
 }
 
 .menu {
@@ -611,4 +615,18 @@ margin: 0 auto;
 .user-score {
   flex: 0 0 30%;
   text-align: center;
+}
+
+.arrow-back {
+  position: absolute;
+  top: 0;
+  left: 0;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  svg {
+    width: 50px;
+    height: 50px;
+  }
+ 
 }
