--- a/style.scss
+++ b/style.scss
@@ -125,7 +125,7 @@ body {
     flex-wrap: wrap;
 
     .output {
-      margin: 43px 10px 20px 0;
+      margin: 60px 10px 20px 0;
       flex: 0 0 140px;
 
       &:nth-child(2) {
@@ -144,6 +144,15 @@ body {
 
     }
 
+  }
+
+  @media only all and (max-width: 300px) {
+    .output {
+      &:first-child {
+        margin-top: 60px;
+      }
+      margin: 20px 10px 0 10px;
+    }
   }
  
 }
