--- a/style.css
+++ b/style.css
@@ -163,14 +163,10 @@ body {
         flex-wrap: wrap;
   }
   .info .output {
-    margin: 60px 10px 20px 0;
+    margin: 60px 0 20px 10px;
     -webkit-box-flex: 0;
         -ms-flex: 0 0 140px;
             flex: 0 0 140px;
-  }
-  .info .output:nth-child(2) {
-    margin-right: 0;
-    margin-left: 10px;
   }
   .info .output .icon {
     -webkit-box-flex: 0;
@@ -183,12 +179,24 @@ body {
   }
 }
 
-@media only all and (max-width: 300px) {
+@media only all and (max-width: 450px) {
+  .info .output:first-child {
+    padding-left: 30px;
+    -ms-flex-preferred-size: 170px;
+        flex-basis: 170px;
+  }
+}
+
+@media only all and (max-width: 330px) {
   .info .output {
-    margin: 20px 10px 0 10px;
+    -ms-flex-preferred-size: 170px;
+        flex-basis: 170px;
   }
   .info .output:first-child {
-    margin-top: 60px;
+    padding-left: 0;
+  }
+  .info .output:nth-child(2) {
+    margin-top: 0;
   }
 }
 
