--- a/style.scss
+++ b/style.scss
@@ -604,26 +604,29 @@ body {
 }
 
 .record-table {
-display: flex;
-color: white;
-font-family: 'Share Tech Mono', monospace;
-flex-wrap: wrap;
-font-size: 24px;
-width: 80%;
-margin: 0 auto;
-@media only all and (max-width: 450px) {
-  width: 100%;
-  font-size: 20px;
+  color: white;
+  font-family: 'Share Tech Mono', monospace;
+  font-size: 24px;
+  width: 80%;
+  margin: 0 auto;
+  @media only all and (max-width: 450px) {
+    width: 100%;
+    font-size: 20px;
+  }
 }
+
+.score-container {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .score-position {
-  flex: 0 0 10%;
+  flex: 0 0 40px;
   text-align: left;
 }
 
 .user-name {
-  flex: 0 0 60%;
+  flex: 0 0 calc(60% - 40px);
   text-align: center;
   margin-bottom: 10px;
 }
