--- a/style.scss
+++ b/style.scss
@@ -41,6 +41,10 @@ body {
   position: relative;
 }
 
+.visibilityhidden {
+  visibility: hidden;
+}
+
 .game-wrapper {
   display: flex;
   justify-content: center;
