--- a/style.css
+++ b/style.css
@@ -47,6 +47,10 @@ body {
   position: relative;
 }
 
+.visibilityhidden {
+  visibility: hidden;
+}
+
 .game-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
